remove submodule and clone repo in ansible

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,12 @@
 # bbb_oc_opencast_password: 'password'
 
 
+# * OC Integration Version *
+# --------------------------
+
+bbb_oc_version: HEAD
+
+
 # * Optional Variables *
 # ----------------------
 
