--- a/tasks/post_publish.yml
+++ b/tasks/post_publish.yml
@@ -9,9 +9,9 @@
         group: root
         mode: "0644"
       loop:
-        - src: opencast-bigbluebutton-integration/post-publish/post_publish.rb
-          dest: /usr/local/bigbluebutton/core/scripts/post_publish/post_publish.rb
-        - src: "opencast-bigbluebutton-integration/oc_modules/"
+        - src: "/tmp/opencast-bigbluebutton-integration/post-publish/post_publish.rb"
+          dest: "/usr/local/bigbluebutton/core/scripts/post_publish/post_publish.rb"
+        - src: "/tmp/opencast-bigbluebutton-integration/oc_modules/"
           dest: "/usr/local/bigbluebutton/core/scripts/post_publish/oc_modules/"
     - name: copy files
       ansible.builtin.template:
