Currently the role doesn't run the post publish script
I added an additional task that runs the post_publish play

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,6 +35,10 @@
 - name: install post archive scripts
   ansible.builtin.include: post_archive.yml
   when: bbb_oc_workflow == "post-archive"
+  
+- name: install post archive scripts
+  ansible.builtin.include: post_publish.yml
+  when: bbb_oc_workflow == "post-publish"
 
 - name: clean up temp
   ansible.builtin.file:
