fix post-upblish tasks

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,6 +36,10 @@
   ansible.builtin.include: post_archive.yml
   when: bbb_oc_workflow == "post-archive"
 
+- name: install post archive scripts
+  ansible.builtin.include: post_archive.yml
+  when: bbb_oc_workflow == "post-publish"
+
 - name: clean up temp
   ansible.builtin.file:
     path: "/tmp/opencast-bigbluebutton-integration/"
