--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,11 +33,11 @@
     version: HEAD
 
 - name: install post archive scripts
-  ansible.builtin.include: post_archive.yml
+  ansible.builtin.include_tasks: post_archive.yml
   when: bbb_oc_workflow == "post-archive"
 
 - name: install post archive scripts
-  ansible.builtin.include: post_archive.yml
+  ansible.builtin.include_tasks: post_archive.yml
   when: bbb_oc_workflow == "post-publish"
 
 - name: clean up temp
